--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
 
   web:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: uvicorn src.app.main:app --host 0.0.0.0 --port 8000
     volumes:
-      - .:/app
+      - .:/src/app
     ports:
       - "8000:8000"
     depends_on:
